# libstrophe

./: .gitignore  Cargo.toml  Makefile.am  build.rs  compile_commands.json  notes.md  strophe.rs
examples/: basic.rs
src/: auth.rs  conn.rs  crypto.rs  ctx.rs  event.rs  handler.rs  hash.rs  jid.rs  md5.rs  parser_expat.rs  rand.rs  resolver.rs  sasl.rs  scram.rs  sha1.rs  snprintf.rs  sock.rs  stanza.rs  tls_openssl.rs  util.rs  uuid.rs
